--- a/package.json
+++ b/package.json
@@ -1,36 +1,20 @@
 {
-  "name": "github-react-portfolio-template",
-  "homepage": "https://YourUserName.github.io/your-repo/",
-  "version": "1.0.2",
-  "private": true,
+  "name": "portfolio",
+  "version": "0.1.1",
+  "private": false,
   "dependencies": {
-    "@iconify/react": "^4.1.0",
-    "@reduxjs/toolkit": "^2.2.6",
-    "bootstrap": "^5.3.3",
-    "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1",
-    "react-error-boundary": "^4.0.13",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.1",
-    "react-scroll": "^1.8.7",
-    "sass": "^1.77.6",
-    "styled-components": "^6.1.11",
-    "workbox-core": "^7.1.0",
-    "workbox-expiration": "^7.1.0",
-    "workbox-precaching": "^7.1.0",
-    "workbox-routing": "^7.1.0",
-    "workbox-strategies": "^7.1.0"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "gh-pages": "^6.1.1",
-    "react-scripts": "^5.0.1"
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.2.2",
+    "aos": "^2.3.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-particles-js": "^3.4.1",
+    "react-scripts": "4.0.1",
+    "tsparticles": "1.33.2",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
