--- a/package.json
+++ b/package.json
@@ -1,41 +1,36 @@
 {
-  "name": "portfolio",
-  "version": "0.1.1",
-  "private": false,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2",
-    "aos": "^2.3.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-particles-js": "^3.4.1",
-    "react-scripts": "4.0.1",
-    "tsparticles": "1.33.2",
-    "web-vitals": "^0.2.4"
-  },
+  "name": "portfolio-next",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@next/bundle-analyzer": "^12.1.6",
+    "framer-motion": "^6.3.10",
+    "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
+    "locomotive-scroll": "^4.1.4",
+    "next": "12.1.5",
+    "null-loader": "^4.0.1",
+    "preact": "^10.9.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-icons": "^4.4.0",
+    "react-locomotive-scroll": "^0.2.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/node": "17.0.24",
+    "@types/react": "18.0.4",
+    "@types/react-dom": "18.0.0",
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.13.0",
+    "eslint-config-next": "12.1.5",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24",
+    "typescript": "4.6.3"
   }
 }
