--- a/package.json
+++ b/package.json
@@ -1,36 +1,69 @@
 {
-  "name": "portfolio-next",
+  "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
-    "@next/bundle-analyzer": "^12.1.6",
-    "framer-motion": "^6.3.10",
-    "graphql": "^16.5.0",
-    "graphql-request": "^4.3.0",
-    "locomotive-scroll": "^4.1.4",
-    "next": "12.1.5",
-    "null-loader": "^4.0.1",
-    "preact": "^10.9.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-icons": "^4.4.0",
-    "react-locomotive-scroll": "^0.2.0"
+    "@emailjs/browser": "^3.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
+    "leaflet": "^1.7.1",
+    "loaders.css": "^0.1.2",
+    "magicmouse.js": "^1.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.5",
+    "react-loaders": "^3.0.1",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "5.0.0",
+    "react-spinners": "^0.14.1",
+    "react-toastify": "^9.0.1",
+    "react-tsparticles": "^2.0.6",
+    "sass": "^1.49.9",
+    "styled-components": "^5.3.5",
+    "TagCloud": "^2.2.0",
+    "tsparticles": "^2.0.6",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "prettify": "prettier --write ."
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest",
+      "prettier"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@types/node": "17.0.24",
-    "@types/react": "18.0.4",
-    "@types/react-dom": "18.0.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.13.0",
-    "eslint-config-next": "12.1.5",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.0.24",
-    "typescript": "4.6.3"
+    "@babel/eslint-parser": "^7.25.1",
+    "@babel/preset-react": "^7.24.7",
+    "babel-eslint": "^10.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "prettier": "^3.3.3"
   }
 }
